# --------- Pymarthe setup file ---------
# allow `pip3 install -e .` for developper (edition) mode

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymarthe"
authors =[
    {"name" = "Ryma Aissat"},
    {"name" = "Alexandre Pryet"},
    {"name" = "Pierre Matran"}
]
dynamic = ["version"]

description = ""
readme = {file = "README.md", content-type = "text/markdown"}   
# license = {file = "LICENSE"}

classifiers = [
    "Programming Language :: Python : 3",
    #"License :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Hydrology",
]

keywords = ["hydrology", "groundwater", "modelling", "uncertainty", "coupling", "pest", "pestpp"]

requires-python = ">=3.7"
dependencies = [
    "pandas >= 1.3.5",
    "numpy >= 1.18.5",
    "appdirs >= 1.4.4",
    "pathlib2 >= 2.3.5",
    "Rtree >= 0.9.4",
    "matplotlib >= 3.2.2",
    "pyshp >= 2.1.2",
    "pyemu >= 1.2.0",
    "flopy"
]

[project.optional-dependencies]
# install with `pip install pymarthe[extras]`
extras = [
    "pyvista >= 0.33.3",
    "vtk >= 9.1.0",
    "imageio >= 2.9.0"
]

[tool.setuptools.dynamic]
version = {attr = "pymarthe.__version__"}
# authors = {attr = "pymarthe.__author__"} # not allow with pyproject.toml setup // allowed in cfg fmt

[project.urls]
Repository = "https://github.com/apryet/adeqwat"
#Documentation = 

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["examples*", "assets*", "presentation*"]  # exclude packages matching these glob patterns (empty by default)

